# amazon-freertos

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .project  .uncrustify.cfg  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  DEPRECATED.txt  Getting Started with the Microchip Curiosity PIC32MZEF 2.0.docx  Getting Started with the Microchip Curiosity PIC32MZEF 2.0.htm  Getting Started with the Microchip SAME54 XPRO.docx  Getting Started with the Microchip SAME54 XPRO.htm  Getting Started with the Microchip SAME70 XULT.docx  Getting Started with the Microchip SAME70 XULT.htm  LICENSE  PreLoad.cmake  README.md  SECURITY.md  change_log.txt  changed_files.txt  checksums.json  directories.txt  summary_release_notes_202107.00.md  tmp
lib/: CMakeLists.txt
lib/FreeRTOS/: tasks.c
lib/FreeRTOS-Plus-POSIX/: .gitignore  CMakeLists.txt
lib/FreeRTOS-Plus-POSIX/doc/: DoxygenLayout.xml
lib/FreeRTOS-Plus-POSIX/include/: FreeRTOS_POSIX.h  FreeRTOS_POSIX_internal.h  FreeRTOS_POSIX_types.h
lib/FreeRTOS-Plus-POSIX/source/: FreeRTOS_POSIX_clock.c  FreeRTOS_POSIX_mqueue.c  FreeRTOS_POSIX_pthread.c  FreeRTOS_POSIX_sched.c  (+7 more)
lib/FreeRTOS-Plus-TCP/: CMakeLists.txt
lib/bluetooth_low_energy/: CMakeLists.txt  aws_ble_event_manager.c  aws_ble_gap.c  aws_ble_gatt.c  iot_ble_gap.c  iot_ble_gatt.c
lib/bufferpool/: CMakeLists.txt  aws_bufferpool_static_thread_safe.c
lib/cbor/: Config
lib/common/: CMakeLists.txt  aws_iot_json_utils.c  aws_iot_logging.c  aws_iot_queue.c  iot_common.c  iot_json_utils.c  iot_taskpool.c
lib/crypto/: CMakeLists.txt  aws_crypto.c
lib/defender/: aws_defender.c  aws_iot_defender.c  aws_iot_defender_api.c  aws_iot_defender_collector.c  aws_iot_defender_mqtt.c  aws_iot_defender_reporter_socket.c  aws_iot_defender_v1.c
lib/defender_new/: aws_iot_serializer.h  aws_iot_serializer_afrcbor.c  aws_iot_serializer_tinycbor.c  aws_iot_serializer_tinycbor_decoder.c  aws_iot_serializer_tinycbor_encoder.c
lib/greengrass/: CMakeLists.txt  aws_greengrass_discovery.c  aws_helper_secure_connect.c
lib/include/: FreeRTOS.h  atomic.h  aws_appversion32.h  aws_ble.h  aws_ble_device_information.h  aws_ble_services_init.h  aws_ble_wifi_provisioning.h  aws_crypto.h  aws_defender.h  aws_greengrass_discovery.h  aws_iot_atomic.h  aws_iot_defender.h  aws_iot_json_utils.h  aws_iot_logging_setup.h  aws_iot_metrics.h  aws_iot_mqtt.h  aws_iot_mqtt_ble.h  aws_iot_network.h  aws_iot_ota_agent.h  aws_iot_queue.h  aws_iot_serializer.h  aws_iot_shadow.h  aws_iot_taskpool.h  aws_iot_taskpool_types.h  aws_mqtt_agent.h  aws_mqtt_lib.h  aws_ota_agent.h  aws_pkcs11.h  aws_pki_utils.h  aws_secure_sockets.h  aws_shadow.h  aws_system_init.h  aws_tls.h  aws_ts_ota_agent.h  aws_wifi.h  iot_ble.h  iot_ble_device_information.h  iot_ble_mqtt.h  iot_ble_wifi_provisioning.h  iot_common.h  (+12 more)
lib/metrics/: CMakeLists.txt  aws_iot_metrics.c  aws_secure_sockets_wrapper_metrics.c  iot_metrics.c
lib/mqtt/: CMakeLists.txt  aws_iot_mqtt_api.c  aws_iot_mqtt_operation.c  aws_iot_mqtt_queue_access.c  aws_iot_mqtt_serialize.c  aws_iot_mqtt_serialize_ble.c  aws_iot_mqtt_subscription.c  aws_iot_mqtt_validate.c  aws_mqtt_agent.c  aws_mqtt_lib.c  iot_ble_mqtt_serialize.c  iot_mqtt_api.c  iot_mqtt_network.c  iot_mqtt_operation.c  iot_mqtt_serialize.c  iot_mqtt_subscription.c  iot_mqtt_validate.c
lib/ota/: CMakeLists.txt  aws_iot_ota_agent.c  aws_ota_agent.c  aws_ota_agent_internal.c  aws_ota_agent_internal.h  aws_ota_cbor.c  aws_ota_cbor_internal.c  aws_ota_cbor_internal.h  aws_ota_pal_internal.c  aws_ota_pal_internal.h  aws_rsprintf.c  aws_ts_ota_agent.c
lib/pkcs11/: CMakeLists.txt  ReadMe.md  aws_pkcs11.c
lib/provisioning/: aws_dev_mode_key_provisioning.c
lib/secure_sockets/: CMakeLists.txt  aws_secure_sockets_common.c  aws_secure_sockets_wrapper_metrics.c
lib/serializer/: CMakeLists.txt
lib/shadow/: CMakeLists.txt  aws_iot_shadow_api.c  aws_iot_shadow_operation.c  aws_iot_shadow_parser.c  aws_iot_shadow_subscription.c  aws_shadow.c  aws_shadow_json.c
lib/tls/: CMakeLists.txt  aws_tls.c
lib/utils/: CMakeLists.txt  aws_ble_services_init.c  aws_iot_serializer_json_encoder.c  aws_iot_serializer_tinycbor_decoder.c  aws_iot_serializer_tinycbor_encoder.c  aws_json_utils.c  aws_pki_utils.c  aws_system_init.c
lib/wifi/: CMakeLists.txt
libraries/: CMakeLists.txt  core_http_demo_dependencies.cmake  core_json.cmake  core_json_module.cmake  core_mqtt.cmake  core_mqtt_agent_demo_dependencies.cmake  core_mqtt_demo_dependencies.cmake  device_defender_demo_dependencies.cmake  device_shadow.cmake  device_shadow_demo_dependencies.cmake  device_shadow_module.cmake  jobs_demo_dependencies.cmake  mqtt_agent.cmake  ota_demo_dependencies.cmake  retry_utils.cmake
libraries/abstractions/: backoff_algorithm.cmake
libraries/ble/: CMakeLists.txt
libraries/coreMQTTAgent/: mqttAgentFilePaths.cmake
libraries/logging/: CMakeLists.txt  README.md  iot_logging.c  iot_logging_task_dynamic_buffers.c
modules/: CMakeLists.txt
tests/: CMakeLists.txt  porting-and-qualification.md
tests/bleTestsScripts/: attributesCommon.py  bleAdapter.py  characteristics.py  gattClient.py  runPI.sh  securityAgent.py  startTests.py  startTests_afqp.py  startTests_integration.py  startTests_kpi.py  startTests_stress.py  test1.py  testClass.py  test_integration.py  test_kpi.py  test_stress.py  testutils.py
tests/common/: aws_test.c  aws_test_framework.c  aws_test_runner.c  iot_test_afr.c  iot_test_freertos.c  iot_tests_network.c
tests/include/: aws_application_version.h  aws_clientcredential.h  aws_clientcredential_keys.h  aws_test_cellular.h  aws_test_framework.h  aws_test_runner.h  aws_test_tcp.h  aws_test_utils.h  aws_unity_config.h  iot_application_version.h  iot_config_common.h
tests/integration_test/: CMakeLists.txt  core_http_system_test.c  core_mqtt_system_test.c  freertos_tcp_test_access_declare.h  freertos_tcp_test_access_dns_define.h  freertos_tcp_test_access_tcp_define.h  shadow_system_test.c  test_freertos_tcp.c
tools/ota_e2e_tests/: README.md  board.json  ota_test_results.xml  pyproject.toml  requirements.txt
(+21127 files in other folders)
