[tool.poetry]
name = "afr_ota_e2e_tests"
version = "1.0.0"
description = "FreeRTOS OTA End to End Integration tests."
authors = ["Sarena Meas <6563840+sarenameas@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.4"
junit-xml = "^1.8"
boto3 = "^1.9"
pyopenssl = "^18.0.0"
future = "^0.17.1"
pyparsing = ">=2.0.3,<2.4.0"
paho-mqtt = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
